--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@ venv.bak/
 chatbotUtils/model/translate.ckpt-2763.data-00000-of-00001
 model/old/translate.ckpt-2763.data-00000-of-00001
 model/translate.ckpt-24368.data-00000-of-00001
+username
+Hashed_passwords.txt
